k8s/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
      host: my.emaple.com
  tls:
    - hosts:
        - my.emaple.com
      secretName: frontend
